--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                        <image xlink:href="assets/img/profil.jpg" y="-10px" width="100%"/>
+                        <image xlink:href="assets/img/profil.png" y="-10px" width="100%"/>
                     </g>
                 </svg>
             </div>
@@ -236,23 +236,27 @@
         <div class="container timeline darkmode-auto py-5">
             <div class="timeline-container timeline-left darkmode-auto">
                 <div class="content rounded bg-light text-dark darkmode-auto">
-                    <h3> <span class="badge bg-secondary">2019</span> Baccalauréat Scientifique</h3>
+                    <h3> <span class="badge bg-secondary">2016 - 2019</span> Baccalauréat Scientifique</h3>
                     <p class="fs-5 ">Lycée Calmette</p>
                     <p class="text-justify">Option ISN avec de la programmation en java et python, mais aussi apprentissage du html5 et css3 à part.</p>
                 </div>
             </div>
             <div class="timeline-container timeline-right darkmode-auto">
                 <div class="content rounded bg-light text-dark darkmode-auto">
-                    <h3><span class="badge bg-secondary">2021</span> DUT Informatique</h3>
+                    <h3><span class="badge bg-secondary">2019 - 2021</span> DUT Informatique</h3>
                     <p class="fs-5">IUT Nice Côte d'Azur</p>
                     <p class="text-justify">Formation initiale menant sur l'apprentissage de l'ensemble des types de langage de programmation existants.</p>
+                    <p class="fs-5">UBS (Monaco)</p>
+                    <p class="text-justify">Stage de 4 mois pour l'obtention du DUT à UBS Monaco en tant que développeur web</p>
                 </div>
             </div>
             <div class="timeline-container timeline-left darkmode-auto">
                 <div class="content rounded bg-light text-dark darkmode-auto">
-                    <h3><span class="badge bg-secondary">2021</span> Stage en entreprise</h3>
-                    <p class="fs-5">UBS (Monaco) S.A.</p>
-                    <p class="text-justify">Stage de 4 mois pour l'obtention du DUT à UBS Monaco en tant que développeur web</p>
+                    <h3><span class="badge bg-secondary">2021 - 2022</span> Licence pro APIDAE</h3>
+                    <p class="fs-5">IUT Montpellier-Sète</p>
+                    <p class="text-justify">Cours en alternance dans le but de poursuivre les études en informatique, parcours : Assistant de Projet Informatique, Développement d’Application E-business.</p>
+                    <p class="fs-5">Orange Business Services (Sophia Antipolis)</p>
+                    <p class="text-justify">Alternant en tant que développeur web d'une durée de 1 an.</p>
                 </div>
             </div>
         </div>
@@ -347,7 +351,7 @@
                 Réalisé par Alexis De Chiara
             </div>
             <div class="col-xs-12 col-md-3 text-md-end">
-                Version 1.0.1
+                Version 1.1.0
             </div>
         </div>
     </div>
